sas-core/main/default/objects/FlightIrregularities__c/FlightIrregularities__c.object-meta.xml
<CustomObject>
    <description>Holds information about delays and cancellations.</description>
    <label>FlightIrregularities</label>
    <nameField>
        <label>FlightIrregularities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FlightIrregularities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>