sas-core/main/default/objects/FlightIrregularities__c/fields/Cancellation_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Time__c</fullName>
    <label>Cancellation_Time</label>
    <type>DateTime</type>
</CustomField>