sas-core/main/default/objects/FlightIrregularities__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The cancellation/delay code parsed from TEDS</description>
    <inlineHelpText>The cancellation/delay code parsed from TEDS</inlineHelpText>
    <label>Cancellation code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>