sas-core/main/default/objects/FlightIrregularities__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of the irregularity defined by IATA</description>
    <inlineHelpText>A description of the irregularity defined by IATA</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>