sas-core/main/default/objects/FlightIrregularities__c/fields/Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_minutes__c</fullName>
    <description>Number of minutes for the duration (parsed from TEDS)</description>
    <inlineHelpText>Number of minutes for the duration (parsed from TEDS)</inlineHelpText>
    <label>Duration minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>