sas-core/main/default/objects/FlightIrregularities__c/fields/Eligible_For_EU261__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_EU261__c</fullName>
    <label>Eligible For EU261</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tentative</fullName>
                <default>true</default>
                <label>Tentative</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>