sas-core/main/default/objects/FlightIrregularities__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <description>The flight to which the irregularity pertains</description>
    <inlineHelpText>The flight to which the irregularity pertains</inlineHelpText>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipName>Flight_Irregularities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>