sas-core/main/default/objects/FlightIrregularities__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>