sas-core/main/default/objects/FlightIrregularities__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>The reason why the flight was delayed/cancelled</description>
    <inlineHelpText>The reason why the flight was delayed/cancelled</inlineHelpText>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>