sas-core/main/default/objects/FlightIrregularities__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of the irregularity (cancellation/delay)</description>
    <inlineHelpText>The type of the irregularity (cancellation/delay)</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>